// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Atoms/Button Render default Button 1`] = `
.c0 {
  border: 2px solid palevioletred;
  border-radius: 3px;
  font-size: 1em;
  margin: 1em;
  padding: 0.25em 1em;
  background-color: palevioletred;
  color: white;
}

<button
  className="c0"
>
  Default Button
</button>
`;

exports[`Atoms/Button Render primary Button 1`] = `
.c0 {
  border: 2px solid palevioletred;
  border-radius: 3px;
  font-size: 1em;
  margin: 1em;
  padding: 0.25em 1em;
  background-color: white;
  color: palevioletred;
}

<button
  className="c0"
>
  Primary Button
</button>
`;
